--- a/Example/Podfile
+++ b/Example/Podfile
@@ -1,11 +1,5 @@
 use_frameworks!
 
 target 'ZImageCropper_Example' do
-  pod 'ZImageCropper', :path => '../'
-
-  target 'ZImageCropper_Tests' do
-    inherit! :search_paths
-
-    
-  end
+  pod 'ZImageCropper'
 end
